config: Turn into a simple wrapper
Now that Configure called config.pm's functions directly, the 'config'
script doesn't have much else to do than to pass arguments.

Reviewed-by: Tim Hudson <tjh@openssl.org>
(Merged from https://github.com/openssl/openssl/pull/11230)

--- a/config
+++ b/config
@@ -1,5 +1,4 @@
-#! /usr/bin/env perl
-# -*- mode: perl; -*-
+#! /bin/sh
 # Copyright 2020 The OpenSSL Project Authors. All Rights Reserved.
 #
 # Licensed under the Apache License 2.0 (the "License").  You may not use
@@ -7,6 +6,5 @@
 # in the file LICENSE in the source distribution or at
 # https://www.openssl.org/source/license.html
 
-use lib "util/perl";
-use OpenSSL::config;
-OpenSSL::config::main();
+THERE=`dirname $0`
+exec "$THERE/Configure" "$@"
