Add assembly config targets for UEFI build [1.1.1]

--- a/Configurations/10-main.conf
+++ b/Configurations/10-main.conf
@@ -1442,6 +1442,14 @@ my %targets = (
         lib_cppflags     => "-DL_ENDIAN",
         sys_id           => "UEFI",
     },
+    "UEFI-x86" => {
+        inherit_from     => [ "UEFI",  asm("x86_asm") ],
+        perlasm_scheme   => "win32n",
+    },
+    "UEFI-x86_64" => {
+        inherit_from     => [ "UEFI",  asm("x86_64_asm") ],
+        perlasm_scheme   => "nasm",
+    },
 
 #### UWIN
     "UWIN" => {
