--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ git:
 
 before_install:
     - if [ -n "$COVERALLS" ]; then
-          pip install --user cpp-coveralls;
+          travis_retry pip install --user cpp-coveralls;
       fi;
     - if expr "$CONFIG_OPTS" ":" ".*enable-external-tests" > /dev/null; then
-          git submodule update --init --recursive;
+          travis_retry git submodule update --init --recursive;
       fi;
     - eval "${MATRIX_EVAL}"
 
@@ -274,7 +274,7 @@ script:
           if [ -e krb5/src ]; then
               sudo apt-get -yq install bison dejagnu gettext keyutils ldap-utils libldap2-dev libkeyutils-dev python-cjson python-paste python-pyrad slapd tcl-dev tcsh;
           fi;
-          if HARNESS_VERBOSE=yes BORING_RUNNER_DIR=$top/boringssl/ssl/test/runner make test; then
+          if HARNESS_VERBOSE=yes BORING_RUNNER_DIR=$top/boringssl/ssl/test/runner travis_wait 70 make _tests; then
               echo -e '+\057\057\057\057\057 MAKE TEST OK';
           else
               echo -e '+\057\057\057\057\057 MAKE TEST FAILED';
