--- a/test/ssl-tests/11-dtls_resumption.cnf.in
+++ b/test/ssl-tests/11-dtls_resumption.cnf.in
@@ -16,9 +16,6 @@ package ssltests;
 
 use protocol_version;
 
-our @tests;
-if (FIPS_MODE) {
-    @tests = generate_resumption_tests("DTLS", 1);
-} else {
-    @tests = generate_resumption_tests("DTLS", 0);
-}
+our $fips_mode;
+
+our @tests = generate_resumption_tests("DTLS", $fips_mode);
