--- a/test/ssl-tests/02-protocol-version.cnf.in
+++ b/test/ssl-tests/02-protocol-version.cnf.in
@@ -16,9 +16,6 @@ use warnings;
 
 use protocol_version;
 
-our @tests;
-if (FIPS_MODE) {
-    @tests = generate_version_tests("TLS", 1);
-} else {
-    @tests = generate_version_tests("TLS", 0);
-}
+our $fips_mode;
+
+our @tests = generate_version_tests("TLS", $fips_mode);
