--- a/test/ssl-tests/25-cipher.cnf.in
+++ b/test/ssl-tests/25-cipher.cnf.in
@@ -15,6 +15,8 @@ use warnings;
 package ssltests;
 use OpenSSL::Test::Utils;
 
+our $fips_mode;
+
 our @tests = (
     {
         name => "cipher-server-1",
@@ -154,4 +156,4 @@ my @tests_poly1305 = (
 );
 
 push @tests, @tests_poly1305
-    unless disabled("poly1305") || disabled("chacha") || FIPS_MODE;
+    unless disabled("poly1305") || disabled("chacha") || $fips_mode;
