--- a/test/ssl-tests/28-seclevel.cnf.in
+++ b/test/ssl-tests/28-seclevel.cnf.in
@@ -12,6 +12,8 @@
 package ssltests;
 use OpenSSL::Test::Utils;
 
+our $fips_mode;
+
 our @tests = (
     {
         name => "SECLEVEL 3 with default key",
@@ -80,5 +82,5 @@ our @tests_tls1_2 = (
 );
 
 #TODO(3.0): No Ed448 or X25519 in FIPS mode at the moment
-push @tests, @tests_ec unless disabled("ec") || FIPS_MODE;
-push @tests, @tests_tls1_2 unless disabled("tls1_2") || disabled("ec")|| FIPS_MODE;
+push @tests, @tests_ec unless disabled("ec") || $fips_mode;
+push @tests, @tests_tls1_2 unless disabled("tls1_2") || disabled("ec")|| $fips_mode;
